<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.anchor.erp.myfuelapp.Activities.HomePage"
    tools:showIn="@layout/app_bar_home_page">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/balances"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="Balance"
                    android:layout_weight="1"
                    android:layout_margin="5dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etbalance"
                        android:focusable="false"
                        android:textSize="18dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="Current Points"
                    android:layout_weight="1"
                    android:layout_margin="5dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:id="@+id/currpts"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/balances"
            android:weightSum="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:weightSum="2"
                android:layout_below="@id/balances"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/grid">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:elevation="20dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    android:clickable="true"
                    android:id="@+id/cardpayfuel">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/gas_station"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:id="@+id/iconfuel"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/iconfuel"
                            android:textColor="@color/black"
                            android:text="Fuel my Car"/>

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:elevation="20dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    android:id="@+id/nearestpetrolstation"
                    android:clickable="true"
                    android:layout_alignParentRight="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/navigation"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:id="@+id/navigation"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/navigation"
                            android:text="Nearest Station"
                            android:textColor="@color/black"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="horizontal"
                android:id="@+id/ll2"
                android:layout_marginTop="10dp"
                android:layout_below="@id/grid"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="20dp"
                    android:id="@+id/buypkg">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="4"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            android:layout_weight="3"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:id="@+id/imgbpkg"
                            android:src="@drawable/buypackage"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvbpkg"
                            android:layout_weight="1"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/imgbpkg"
                            android:text="@string/buypkg"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="20dp"
                    android:id="@+id/chkblnc">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="4"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            android:layout_weight="3"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:id="@+id/imgcbl"
                            android:src="@drawable/check_balance"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvcbl"
                            android:layout_weight="1"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/imgcbl"
                            android:text="@string/checkbalance"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="20dp"
                    android:id="@+id/consumption">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="4"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            android:layout_weight="3"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:id="@+id/imgcnsp"
                            android:src="@drawable/consumption"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/tvcnsp"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/imgcnsp"
                            android:text="@string/consumption"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="horizontal"
                android:id="@+id/ll3"
                android:layout_marginTop="10dp"
                android:layout_below="@id/ll2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="20dp"
                    android:id="@+id/offers">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:weightSum="4">

                        <ImageView
                            android:layout_width="85dp"
                            android:layout_weight="3"
                            android:layout_height="85dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:id="@+id/imgoffers"
                            android:src="@drawable/offer"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvoffers"
                            android:layout_weight="1"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/imgoffers"
                            android:text="@string/offers"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="20dp"
                    android:id="@+id/reports">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:weightSum="4">

                        <ImageView
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            android:layout_weight="3"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:id="@+id/imgreports"
                            android:src="@drawable/report"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvbreports"
                            android:layout_weight="1"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/imgreports"
                            android:text="@string/reports"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="20dp"
                    android:id="@+id/sambaza">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="4"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            android:layout_weight="3"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:id="@+id/imgsambaza"
                            android:src="@drawable/sambaza"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/tvbsambaza"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/imgsambaza"
                            android:text="@string/sambaza"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>